# qspgui

./: .gitignore  CMakeLists-qsp.txt.in  CMakeLists-wxWidgets.txt.in  CMakeLists.txt  README.md  build_release.sh  build_release_macos.sh  qspgui_config.h.cmakein
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: release.yml  release_on_tag.yml
build_packages/: pack_linux64.sh  pack_linux64_AppImage.sh  pack_macos.sh  pack_win32.sh
build_wx/: wxPatch.diff
create_lang/: qspgui_be.po  qspgui_de.po  qspgui_en.po  qspgui_eo.po  qspgui_ru.po  qspgui_uk.po  qspgui_zh.po
create_lang/linux/: mo_create
create_lang/win32/: mo_create.cmd  po_create.cmd  po_update.cmd
cross_build/: build-win32.sh  build_AppImage.sh  build_linux64.sh  build_win32.sh  pack_linux64.sh  pack_linux64_AppImage.sh  pack_win32.sh
misc/common/langs/be/: qspgui_be.mo
misc/common/langs/de/: qspgui_de.mo
misc/common/langs/en/: qspgui_en.mo
misc/common/langs/eo/: qspgui_eo.mo
misc/common/langs/ru/: qspgui_ru.mo
misc/common/langs/uk/: qspgui_uk.mo
misc/common/langs/zh/: qspgui_zh.mo
misc/linux/: qspgui.desktop
misc/macos/: Info.plist  icon.icns
qspgui/: animwin.cpp  animwin.h  app.cpp  app.h  callbacks_gui.cpp  callbacks_gui.h  comtools.cpp  comtools.h  frame.cpp  frame.h  imgcanvas.cpp  imgcanvas.h  initevent.cpp  initevent.h  inputbox.cpp  inputbox.h  inputdlg.cpp  inputdlg.h  listbox.cpp  listbox.h  msgdlg.cpp  msgdlg.h  path_provider.h  textbox.cpp  textbox.h  transhelper.cpp  transhelper.h  updateappdialog.cpp  updateappdialog.h
qspgui/rsc/: res.rc
qspgui/sound/: sound_engine.c  sound_engine.h
